kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/007_resultNotSet.kmt
/* $Id: $
 * Creation date: September 10, 2007
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta

using kermeta::standard

class Main 
{

	operation testResultSet() : String is do
	
	end
	
} 